# snake

./: CMakeLists.txt  main.c
include/: snakeMove.h
snake/: CMakeLists.txt  main.c
snake/include/: SnakeMove.h  game.h  key.h  menu.h  nwindow.h  ranking.h
snake/res/: credits.txt  start.txt
snake/src/: SnakeMove.c  game.c  key.c  menu.c
src/: snakeMove.c  sys.c
